--- a/ninjas_reading_list/server/package.json
+++ b/ninjas_reading_list/server/package.json
@@ -15,6 +15,7 @@
     "express-graphql": "^0.11.0",
     "graphql": "^15.3.0",
     "lodash": "^4.17.19",
+    "mongoose": "^5.10.9",
     "nodemon": "^2.0.4"
   }
 }
